Fixed the NullPointerException for very first request.